# pygtranslate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pygtranslate/: __init__.py  __main__.py  core.py
tests/: test_gtranslate.py
