[tool.poetry]
name = "pygtranslate"
version = "0.0.1"
description = "Very Simple Python Google Translator"
authors = ["Kyoungseoun Chung <kchung@student.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
